@@ -32,7 +32,7 @@
             -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
         </byteman.server.jvm.args>
         <server.jvm.args>
-            ${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug}
+            ${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug} ${jvm.args.jdk9}
         </server.jvm.args>
     </properties>
     <build>
@@ -294,7 +294,9 @@
             <activation>
                 <jdk>[1.9,)</jdk>
             </activation>
-
+            <properties>
+                <jvm.args.jdk9>--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</jvm.args.jdk9>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -321,29 +323,6 @@
                             </execution>
                         </executions>
                     </plugin>
-           <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-test</id>
-                  <phase>test</phase>
-                  <goals>
-                    <goal>test</goal>
-                  </goals>
-                  <configuration combine.self="override">
-                    <forkMode>always</forkMode>
-                    <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-                    <systemPropertyVariables combine.children="append">
-                        <server.jvm.args>${server.jvm.args}</server.jvm.args>
-                        <node.address>127.0.0.1</node.address>
-                    </systemPropertyVariables>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-
                 </plugins>
             </build>
         </profile>
